--- a/test.ipynb
+++ b/test.ipynb
@@ -316,7 +316,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "llm=ChatGroq(groq_api_key=\"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\",\n",
+    "llm=ChatGroq(groq_api_key=\"\",\n",
     "             \n",
     "             model_name=llm_model)"
    ]
